# auto-doc

./: README.md  db.json  pyproject.toml
auto_doc/: __init__.py  __main__.py  cli.py  formatter.py  methodology.py  server.py
auto_doc/resources/: default_methodology.toml
tests/: test_formatter.py  test_server.py
